[tool.poetry]
name = "chatgraph"
version = "0.3.15"
description = "A user-friendly chatbot library"
authors = ["Irisson N. Lima <irisson.lima@verdecard.com.br>"]
readme = "README.md"
homepage = "https://github.com/irissonnlima/chatgraph"
repository = "https://github.com/irissonnlima/chatgraph"
keywords = ["chatbot", "rabbitmq", "messaging", "routing", "chatgraph", "python"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
pika = "^1.3.2"
rich = "^13.8.1"
grpcio = "^1.67.0"
grpcio-tools = "^1.67.0"
python-dotenv = "^1.0.1"
typer = "^0.12.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"

[tool.poetry.scripts]
chatgraph = "chatgraph.cli:main"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
test = 'pytest --cov=chatgraph --cov-report=html'
start_cov = 'start htmlcov/index.html'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff format . && ruff check . --fix'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"