[project]
name = "chatgraph"
version = "1.0.5"
description = "A user-friendly chatbot library"
authors = [
    {name = "Irisson N. Lima", email = "irisson.lima@verdecard.com.br"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
keywords = ["chatbot", "rabbitmq", "messaging", "routing", "chatgraph", "python"]
license = {text = "MIT"}
dependencies = [
    "pika>=1.3.2",
    "rich>=13.8.1",
    "grpcio>=1.67.0",
    "grpcio-tools>=1.67.0",
    "python-dotenv>=1.0.1",
    "typer>=0.12.5",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "protobuf>=6.31.1",
    "httpx>=0.28.1",
    "aio-pika>=9.5.8",
]

dev-dependencies = [
    "ruff>=0.5.1",
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "taskipy>=1.13.0",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
    "pytest-httpx>=0.35.0",
]


[project.urls]
Homepage = "https://github.com/irissonnlima/chatgraph"
Repository = "https://github.com/irissonnlima/chatgraph"

[project.scripts]
  # chatgraph = "chatgraph.cli:main"


[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"
testpaths = ["tests"]
markers = [
    "unit: marks tests as unit tests (fast, isolated, uses mocks)",
    "integration: marks tests as integration tests (slow, requires external services)",
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
test = 'pytest --cov=chatgraph --cov-report=html'
start_cov = 'start htmlcov/index.html'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff format . && ruff check . --fix'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"